--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,13 +1,26 @@
 <%- include('../partials/header') %>
 
-
-
-<ul>
-<% flights.forEach(flight => { %>
-    <li>
-        <%= flight.airline %> - <%= flight.airport %> - <%= flight.flightNo %> - <%= flight.departs %>
-    </li>
-<% } ) %>
-</ul>
+<section id="flight-index">
+    <table id="flight-table">
+        <thead>
+            <tr>
+                <th>Airline</th>
+                <th>Airport</th>
+                <th>Flight No.</th>
+                <th>Departs</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% flights.forEach(flight => { %>
+                <tr style="<%= Date.now() > flight.departs ? 'color: red' : '' %>">
+                    <td> <%= flight.airline %>  </td>
+                    <td>  <%= flight.airport %> </td>
+                    <td> <%= flight.flightNo %> </td>
+                    <td> <%= flight.departs.toLocaleDateString("en-US") %> </td>
+                </tr>
+            <% } ) %>
+        </tbody>
+    </table>
+</section>
 
 <%- include('../partials/footer') %>
