--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -16,7 +16,7 @@
     <label for="flightNo">Flight Number:</label>
     <input type="number" name="flightNo" id="flightNo" min="10" max="9999" required>
     <label for="departs">Departs: </label>
-    <input type="date" name="departs" id="departs">
+    <input type="datetime-local" name="departs" id="departs" value="<%= departsDate %>">
 
     <button type="submit">Save</button>
 </form>
