--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -8,6 +8,7 @@
                 <th>Airport</th>
                 <th>Flight No.</th>
                 <th>Departs</th>
+                <th>Details</th>
             </tr>
         </thead>
         <tbody>
@@ -16,7 +17,8 @@
                     <td> <%= flight.airline %>  </td>
                     <td>  <%= flight.airport %> </td>
                     <td> <%= flight.flightNo %> </td>
-                    <td> <%= flight.departs.toLocaleDateString("en-US") %> </td>
+                    <td> <%= `${flight.departs.toLocaleDateString("en-US")} : ${flight.departs.toLocaleTimeString("en-US")} ` %> </td>
+                    <td><a href="/flights/<%= flight.id %>">Details</a></td>
                 </tr>
             <% } ) %>
         </tbody>
