--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,15 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="/javascripts/formBuilder.js" defer></script>
 </head>
-<body>
-    
-<nav>
-    <a href="/flights">All Flights</a>
-    <a href="/flights/new">Add Flight</a>
-</nav>
+<body class="min-h-screen">
+<header class="bg-teal-500">
+    <h1 class="text-xl">🛫</h1>
+
+    <nav>
+        <a href="/flights">All Flights</a>
+        <a href="/flights/new">Add Flight</a>
+    </nav>
+
+</header>
+<main class="flex-center">
+
