--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,28 +1,36 @@
 <%- include('../partials/header') %>
 
-<section id="flight-index">
-    <table id="flight-table">
-        <thead>
-            <tr>
-                <th>Airline</th>
-                <th>Airport</th>
-                <th>Flight No.</th>
-                <th>Departs</th>
-                <th>Details</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% flights.forEach(flight => { %>
-                <tr style="<%= Date.now() > flight.departs ? 'color: red' : '' %>">
-                    <td> <%= flight.airline %>  </td>
-                    <td>  <%= flight.airport %> </td>
-                    <td> <%= flight.flightNo %> </td>
-                    <td> <%= `${flight.departs.toLocaleDateString("en-US")} : ${flight.departs.toLocaleTimeString("en-US")} ` %> </td>
-                    <td><a href="/flights/<%= flight.id %>">Details</a></td>
-                </tr>
-            <% } ) %>
-        </tbody>
-    </table>
+<section id="flight-index" class="flex-center">
+    <h1>All Flights</h1>
+    <div class="grid-5 width-50 mg-1">
+        <div class="item"><h3>Airline</h3></div>
+        <div class="item"><h3>Airport</h3></div>
+        <div class="item"><h3>Flight No.</h3></div>
+        <div class="item"><h3>Departs</h3></div>
+        <div class="item"><h3>Details</h3></div>
+        <% flights.forEach(flight => { %>
+                
+            <div <%- Date.now() > flight.departs && 'class=red' %> >
+                <p> <%= flight.airline %></p>
+            </div>
+            <div <%- Date.now() > flight.departs && 'class=red' %> >
+                <p> <%= flight.airport %></p>
+            </div>
+            <div <%- Date.now() > flight.departs && 'class=red' %> >
+                <p> <%= flight.flightNo %></p>
+            </div>
+            <div <%- Date.now() > flight.departs && 'class=red' %> >
+                <p> <%= `${flight.departs.toLocaleDateString("en-US")} : ${flight.departs.toLocaleTimeString("en-US")}` %></p>
+            </div>
+            <div <%- Date.now() > flight.departs && 'class=red' %> >
+                <a class="btn-primary mg-auto" href="/flights/<%= flight.id %>">Details</a>
+            </div>
+
+        
+        <% } ) %>
+    </div>
+
+   
 </section>
 
 <%- include('../partials/footer') %>
