--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,8 +7,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="/javascripts/formBuilder.js" defer></script>
 </head>
-<body class="min-h-screen">
-<header class="bg-teal-500">
+<body>
+<header>
     <h1 class="text-xl">🛫</h1>
 
     <nav>
