--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,24 +1,38 @@
 <%- include('../partials/header') %>
 
 <form action="/flights" method="POST">
-    <label for="airline">Airline: </label>
-    <select name="airline" id="airline">
-        <option value="BA">British Airways</option>
-        <option value="American">American</option>
-        <option value="United">United</option>
-    </select>
-    <label for="airport">Airport: </label>
-    <select name="airport" id="airport">
-        <option value="LHR">LHR</option>
-        <option value="LAX">LAX</option>
-        <option value="YYC">YYC</option>
-    </select>
-    <label for="flightNo">Flight Number:</label>
-    <input type="number" name="flightNo" id="flightNo" min="10" max="9999" required>
-    <label for="departs">Departs: </label>
-    <input type="datetime-local" name="departs" id="departs" value="<%= departsDate %>">
+    <div class="grid-2 p2">
+        <h2 class="item-2">Add Flight</h2>
 
-    <button type="submit">Save</button>
+        <label for="airline">Airline: </label>
+        <div>
+            <select name="airline" id="airline">
+                <option value="BA">British Airways</option>
+                <option value="American">American</option>
+                <option value="United">United</option>
+            </select>
+        </div>
+        <label for="airport">Airport: </label>
+        <div>
+            <select name="airport" id="airport">
+                <option value="LHR">LHR</option>
+                <option value="LAX">LAX</option>
+                <option value="YYC">YYC</option>
+            </select>
+        </div>
+        <label for="flightNo">Flight Number:</label>
+        <div>
+            <input type="number" name="flightNo" id="flightNo" min="10" max="9999" required>
+        </div>
+        <label for="departs">Departs: </label>
+        <div>
+            <input type="datetime-local" name="departs" id="departs" value="<%= departsDate %>">
+        </div>
+        <div class="item-2">
+            <button class="btn-secondary plr-5" type="submit">Save</button>
+        </div>
+
+    </div>
 </form>
 
 <%- include('../partials/footer') %>
