--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <h1 class="text-xl">🛫</h1>
+    <div id="plane">🛫</div>
 
     <nav>
         <a href="/flights">All Flights</a>
